[gd_scene load_steps=14 format=4 uid="uid://cae8yu3awbmbg"]

[ext_resource type="Script" uid="uid://b7vuadrdyxlsm" path="res://Code/Scripts/main.gd" id="2_0xm2m"]
[ext_resource type="TileSet" uid="uid://cxeo3tlu67esw" path="res://new.tres" id="2_h2yge"]
[ext_resource type="PackedScene" uid="uid://clnd6o2athawa" path="res://Code/Scenes/block_selection_area.tscn" id="3_00ibb"]
[ext_resource type="Script" uid="uid://kf7orslwuxvn" path="res://Code/Scripts/camera.gd" id="3_h2yge"]
[ext_resource type="Script" uid="uid://dh4egidaetixk" path="res://Code/Scripts/placed.gd" id="3_lnakw"]
[ext_resource type="PackedScene" uid="uid://bmoetnow0tott" path="res://Code/Scenes/particle.tscn" id="4_1bvp3"]
[ext_resource type="PackedScene" uid="uid://bpfmyw70uyw1t" path="res://Code/Scenes/music_tile.tscn" id="5_5vw27"]
[ext_resource type="Script" uid="uid://2dekps56pd4c" path="res://Code/Scripts/music_tiles.gd" id="5_efxa6"]
[ext_resource type="Theme" uid="uid://bdr05o8d1jkue" path="res://theme.tres" id="8_ibtm5"]
[ext_resource type="FontFile" uid="uid://i4vnmwijan71" path="res://pixel.ttf" id="12_dw7sb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lnakw"]
bg_color = Color(0.50735855, 0.5462144, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.76053685, 0, 0.31772, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ibtm5"]
bg_color = Color(0.8513223, 0.5061946, 1.92523e-07, 1)
shadow_size = 5

[sub_resource type="Theme" id="Theme_ab0av"]
default_font = ExtResource("12_dw7sb")

[node name="Node2D" type="Node2D"]
script = ExtResource("2_0xm2m")

[node name="Selection" type="TileMapLayer" parent="."]
texture_repeat = 2
position = Vector2(0, 363)
scale = Vector2(0.703, 0.703)
tile_set = ExtResource("2_h2yge")

[node name="BlockSelection1" parent="Selection" instance=ExtResource("3_00ibb")]
position = Vector2(93.8834, 109.531)

[node name="BlockSelection2" parent="Selection" instance=ExtResource("3_00ibb")]
position = Vector2(253.201, 108.108)
block_id = 1

[node name="BlockSelection3" parent="Selection" instance=ExtResource("3_00ibb")]
position = Vector2(418.208, 108.108)
block_id = 2

[node name="Placed" type="TileMapLayer" parent="."]
texture_filter = 1
use_parent_material = true
position = Vector2(5.96046e-08, 32)
scale = Vector2(0.938, 0.938)
tile_map_data = PackedByteArray("AAAKAAkAAQAOAAAAAAABAAkAAQAOAAAAAAAKAAgAAQAOAAAAAAAKAAcAAQAOAAAAAAAKAAYAAQAOAAAAAAAKAAUAAQAOAAAAAAAKAAQAAQAOAAAAAAABAAgAAQAOAAAAAAABAAcAAQAOAAAAAAABAAUAAQAOAAAAAAABAAQAAQAOAAAAAAABAAMAAQAOAAAAAAABAAIAAQAOAAAAAAABAAEAAQAOAAAAAAABAAoAAQAOAAAAAAACAAEAAQAOAAAAAAACAAoAAQAOAAAAAAADAAEAAQAOAAAAAAADAAoAAQAOAAAAAAAEAAEAAQAOAAAAAAAEAAoAAQAOAAAAAAAFAAEAAQAOAAAAAAAFAAoAAQAOAAAAAAAGAAEAAQAOAAAAAAAGAAoAAQAOAAAAAAAHAAEAAQAOAAAAAAAHAAoAAQAOAAAAAAAIAAEAAQAOAAAAAAAIAAoAAQAOAAAAAAAJAAEAAQAOAAAAAAAJAAoAAQAOAAAAAAAKAAEAAQAOAAAAAAAKAAIAAQAOAAAAAAAKAAMAAQAOAAAAAAAKAAoAAQAOAAAAAAABAAYAAAAOAAAAAAAAAAYAAAACAAAAAAAAAAUAAAACAAAAAAA=")
tile_set = ExtResource("2_h2yge")
script = ExtResource("3_lnakw")

[node name="Ghost" type="TileMapLayer" parent="."]
position = Vector2(0, 32)
scale = Vector2(0.938, 0.938)
tile_set = ExtResource("2_h2yge")

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(180, 400)
script = ExtResource("3_h2yge")
random_strength = 5.0
fade = 10.0

[node name="Timer" type="Timer" parent="Camera"]
one_shot = true

[node name="Particle" parent="." instance=ExtResource("4_1bvp3")]
position = Vector2(174, 401)

[node name="MusicTiles" type="Node" parent="."]
script = ExtResource("5_efxa6")

[node name="MusicTile" parent="MusicTiles" instance=ExtResource("5_5vw27")]
position = Vector2(15, 211)
scale = Vector2(0.1171875, 60.000015)
tile_color = Color(0.506133, 0.99999994, 0.3493478, 1)

[node name="MusicTile2" parent="MusicTiles" instance=ExtResource("5_5vw27")]
position = Vector2(15.000001, 301.50018)
scale = Vector2(0.1171875, 120.99967)
tile_color = Color(0.42486095, 0.37937742, 1, 1)
type = 2

[node name="MusicTile3" parent="MusicTiles" instance=ExtResource("5_5vw27")]
position = Vector2(14.999992, 121.49999)
scale = Vector2(0.11718757, 119.00001)
tile_color = Color(0.22884688, 1.0588765e-05, 0.9419628, 1)
type = 3

[node name="MusicTile4" parent="MusicTiles" instance=ExtResource("5_5vw27")]
position = Vector2(89.2084, 47.077305)
rotation = 1.5707964
scale = Vector2(0.11665177, 118.25813)
tile_color = Color(1, 0.8745098, 0, 1)
type = 1

[node name="MusicTile5" parent="MusicTiles" instance=ExtResource("5_5vw27")]
position = Vector2(270.98434, 47.051056)
rotation = 1.5707964
scale = Vector2(0.1169033, 118.37256)
tile_color = Color(0, 0.6717426, 0.5279132, 1)
type = 4

[node name="MusicTile6" parent="MusicTiles" instance=ExtResource("5_5vw27")]
position = Vector2(180, 47.09662)
rotation = 1.5707964
scale = Vector2(0.11671469, 63.927788)
tile_color = Color(0.95686275, 0.5254902, 0, 1)
type = 5

[node name="ProgressBars" type="Control" parent="MusicTiles"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ProgressBar" type="ProgressBar" parent="MusicTiles/ProgressBars"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 13.005001
anchor_right = 7.991
anchor_bottom = 18.512001
offset_left = 120.0
offset_top = 35.799927
offset_right = 29.359985
offset_bottom = -157.48004
theme_override_styles/background = SubResource("StyleBoxFlat_lnakw")
theme_override_styles/fill = SubResource("StyleBoxFlat_ibtm5")
show_percentage = false

[node name="Label" type="Label" parent="MusicTiles/ProgressBars/ProgressBar"]
layout_mode = 0
offset_left = -82.0
offset_top = 4.0
offset_right = -42.0
offset_bottom = 27.0
theme = ExtResource("8_ibtm5")
theme_override_font_sizes/font_size = 13

[node name="ProgressBar2" type="ProgressBar" parent="MusicTiles/ProgressBars"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 13.005001
anchor_right = 7.991
anchor_bottom = 18.512001
offset_left = 122.0
offset_top = 74.79993
offset_right = 31.359985
offset_bottom = -118.48004
theme_override_styles/background = SubResource("StyleBoxFlat_lnakw")
theme_override_styles/fill = SubResource("StyleBoxFlat_ibtm5")
show_percentage = false

[node name="Label" type="Label" parent="MusicTiles/ProgressBars/ProgressBar2"]
layout_mode = 0
offset_left = -95.0
offset_top = -2.0
offset_right = -55.0
offset_bottom = 21.0
theme = ExtResource("8_ibtm5")
theme_override_font_sizes/font_size = 13

[node name="ProgressBar3" type="ProgressBar" parent="MusicTiles/ProgressBars"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 13.005001
anchor_right = 7.991
anchor_bottom = 18.512001
offset_left = 123.0
offset_top = 110.79993
offset_right = 32.359985
offset_bottom = -82.48004
theme_override_styles/background = SubResource("StyleBoxFlat_lnakw")
theme_override_styles/fill = SubResource("StyleBoxFlat_ibtm5")
show_percentage = false

[node name="Label" type="Label" parent="MusicTiles/ProgressBars/ProgressBar3"]
layout_mode = 0
offset_left = -97.0
offset_top = 3.0
offset_right = -57.0
offset_bottom = 26.0
theme = ExtResource("8_ibtm5")
theme_override_font_sizes/font_size = 13

[node name="ProgressBar4" type="ProgressBar" parent="MusicTiles/ProgressBars"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 13.005001
anchor_right = 7.991
anchor_bottom = 18.512001
offset_left = 124.0
offset_top = 144.79993
offset_right = 33.359985
offset_bottom = -48.48004
theme_override_styles/background = SubResource("StyleBoxFlat_lnakw")
theme_override_styles/fill = SubResource("StyleBoxFlat_ibtm5")
show_percentage = false

[node name="Label" type="Label" parent="MusicTiles/ProgressBars/ProgressBar4"]
layout_mode = 0
offset_left = -100.0
offset_top = 1.0
offset_right = -60.0
offset_bottom = 24.0
theme = ExtResource("8_ibtm5")
theme_override_font_sizes/font_size = 13

[node name="ProgressBar5" type="ProgressBar" parent="MusicTiles/ProgressBars"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 13.005001
anchor_right = 7.991
anchor_bottom = 18.512001
offset_left = 124.0
offset_top = 177.79993
offset_right = 33.359985
offset_bottom = -15.4800415
theme_override_styles/background = SubResource("StyleBoxFlat_lnakw")
theme_override_styles/fill = SubResource("StyleBoxFlat_ibtm5")
show_percentage = false

[node name="Label" type="Label" parent="MusicTiles/ProgressBars/ProgressBar5"]
layout_mode = 0
offset_left = -103.0
offset_top = 1.0
offset_right = -63.0
offset_bottom = 24.0
theme = ExtResource("8_ibtm5")
theme_override_font_sizes/font_size = 13

[node name="ProgressBar6" type="ProgressBar" parent="MusicTiles/ProgressBars"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 13.005001
anchor_right = 7.991
anchor_bottom = 18.512001
offset_left = 125.0
offset_top = 209.79993
offset_right = 34.359985
offset_bottom = 16.519958
theme_override_styles/background = SubResource("StyleBoxFlat_lnakw")
theme_override_styles/fill = SubResource("StyleBoxFlat_ibtm5")
show_percentage = false

[node name="Label" type="Label" parent="MusicTiles/ProgressBars/ProgressBar6"]
layout_mode = 0
offset_left = -149.0
offset_top = 2.0
offset_right = -109.0
offset_bottom = 25.0
theme = ExtResource("8_ibtm5")
theme_override_font_sizes/font_size = 13

[node name="Move" type="TileMapLayer" parent="."]
z_index = 1
texture_filter = 1
use_parent_material = true
position = Vector2(58, 492)
scale = Vector2(0.938, 0.938)
tile_set = ExtResource("2_h2yge")

[node name="MusicClock" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="BeatTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="ScoreLabel" type="Label" parent="."]
offset_right = 135.0
offset_bottom = 34.0
scale = Vector2(0.985195, 0.970085)
theme = SubResource("Theme_ab0av")
text = "Score:"
metadata/_edit_use_anchors_ = true

[node name="PauseButton" type="Button" parent="."]
offset_left = 304.0
offset_right = 359.0
offset_bottom = 31.0
text = "Pause"

[node name="CanLoseTimer" type="Timer" parent="."]
wait_time = 32.0
one_shot = true
autostart = true

[connection signal="block_selected" from="Selection/BlockSelection1" to="." method="_on_block_selected"]
[connection signal="block_selected" from="Selection/BlockSelection2" to="." method="_on_block_selected"]
[connection signal="block_selected" from="Selection/BlockSelection3" to="." method="_on_block_selected"]
[connection signal="timeout" from="Camera/Timer" to="Camera" method="_on_timer_timeout"]
[connection signal="timeout" from="MusicClock" to="." method="_on_music_clock_timeout"]
[connection signal="timeout" from="MusicClock" to="MusicTiles" method="_on_music_clock_timeout"]
[connection signal="timeout" from="BeatTimer" to="." method="_on_beat_timer_timeout"]
[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="timeout" from="CanLoseTimer" to="." method="_on_can_lose_timer_timeout"]
