[gd_scene load_steps=6 format=4 uid="uid://cae8yu3awbmbg"]

[ext_resource type="Script" uid="uid://b7vuadrdyxlsm" path="res://main.gd" id="2_0xm2m"]
[ext_resource type="TileSet" uid="uid://cxeo3tlu67esw" path="res://new.tres" id="2_h2yge"]
[ext_resource type="Script" uid="uid://cdk4vekkahrky" path="res://move.gd" id="3_h2yge"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h2yge"]
size = Vector2(127, 128.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1bvp3"]
size = Vector2(128, 128)

[node name="Node2D" type="Node2D"]
position = Vector2(-1, 1)
script = ExtResource("2_0xm2m")

[node name="Ghost" type="TileMapLayer" parent="."]
scale = Vector2(0.705, 0.705)
tile_set = ExtResource("2_h2yge")

[node name="Placed" type="TileMapLayer" parent="."]
texture_filter = 1
use_parent_material = true
scale = Vector2(0.705, 0.705)
tile_map_data = PackedByteArray("AAAEABAAAQANAAAAAAAAAAIAAQANAAAAAAAAAAMAAQANAAAAAAAAAAQAAQANAAAAAAAAAAUAAQANAAAAAAAAAAYAAQANAAAAAAAAAAcAAQANAAAAAAAAAAgAAQANAAAAAAAAAAkAAQANAAAAAAABABAAAQANAAAAAAACABAAAQANAAAAAAADABAAAQANAAAAAAAGABAAAQANAAAAAAAHABAAAQANAAAAAAAIABAAAQANAAAAAAAJABAAAQANAAAAAAAKABAAAQANAAAAAAALABAAAQANAAAAAAAMABAAAQANAAAAAAANABAAAQANAAAAAAAOABAAAQANAAAAAAAPABAAAQANAAAAAAAKABEAAQANAAAAAAAPAA8AAQANAAAAAAAPAA4AAQANAAAAAAAPAA0AAQANAAAAAAAPAAwAAQANAAAAAAAPAAsAAQANAAAAAAAPAAoAAQANAAAAAAAPAAkAAQANAAAAAAAPAAgAAQANAAAAAAAPAAcAAQANAAAAAAAPAAYAAQANAAAAAAAPAAUAAQANAAAAAAAPAAQAAQANAAAAAAAPAAMAAQANAAAAAAAPAAIAAQANAAAAAAAPAAEAAQANAAAAAAAOAAEAAQANAAAAAAANAAEAAQANAAAAAAAMAAEAAQANAAAAAAAFAAEAAQANAAAAAAAGAAEAAQANAAAAAAAIAAEAAQANAAAAAAAJAAEAAQANAAAAAAAKAAEAAQANAAAAAAALAAEAAQANAAAAAAAHAAEAAQANAAAAAAAPABEAAQANAAAAAAAAABIAAQANAAAAAAAAABMAAQANAAAAAAAAABQAAQANAAAAAAAKABIAAQANAAAAAAAKABMAAQANAAAAAAAKABQAAQANAAAAAAAPABIAAQANAAAAAAAPABMAAQANAAAAAAAPABQAAQANAAAAAAAPABUAAQANAAAAAAAOABUAAQANAAAAAAANABUAAQANAAAAAAAMABUAAQANAAAAAAALABUAAQANAAAAAAAKABUAAQANAAAAAAAJABUAAQANAAAAAAAHABUAAQANAAAAAAAGABUAAQANAAAAAAAFABUAAQANAAAAAAAEABUAAQANAAAAAAADABUAAQANAAAAAAACABUAAQANAAAAAAABABUAAQANAAAAAAAAABUAAQANAAAAAAAIABUAAQANAAAAAAAAAAoAAQANAAAAAAAAAAsAAQANAAAAAAAAAAwAAQANAAAAAAAAAA0AAQANAAAAAAAAAA4AAQANAAAAAAAAAA8AAQANAAAAAAAAABAAAQANAAAAAAAAABEAAQANAAAAAAAFABAAAQANAAAAAAAFABEAAQANAAAAAAAFABIAAQANAAAAAAAFABMAAQANAAAAAAAFABQAAQANAAAAAAAEAAEAAQANAAAAAAADAAEAAQANAAAAAAACAAEAAQANAAAAAAABAAEAAQANAAAAAAAAAAEAAQANAAAAAAADAP3/AQACAAAAAAA=")
tile_set = ExtResource("2_h2yge")

[node name="Area1" type="Area2D" parent="Placed"]
position = Vector2(62, 620)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Placed/Area1"]
position = Vector2(33.5, -12.25)
shape = SubResource("RectangleShape2D_h2yge")

[node name="Area2" type="Area2D" parent="Placed"]
position = Vector2(256, 608)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Placed/Area2"]
shape = SubResource("RectangleShape2D_1bvp3")

[node name="Area3" type="Area2D" parent="Placed"]
position = Vector2(416, 608)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Placed/Area3"]
shape = SubResource("RectangleShape2D_1bvp3")

[node name="Move" type="TileMapLayer" parent="."]
texture_filter = 1
use_parent_material = true
position = Vector2(33, 543)
scale = Vector2(0.705, 0.705)
tile_set = ExtResource("2_h2yge")
script = ExtResource("3_h2yge")

[connection signal="input_event" from="Placed/Area1" to="." method="_on_area_1_input_event"]
[connection signal="input_event" from="Placed/Area2" to="." method="_on_area_2_input_event"]
[connection signal="input_event" from="Placed/Area3" to="." method="_on_area_3_input_event"]
